// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndexSelectorItem /> should render 1`] = `
<IndexSelectorItem__StyledIndexSelectorItem
  active={true}
  onClick={[Function]}
>
  <Checkbox
    checked={true}
    disabled={false}
  />
  <strong>
    bar
  </strong>
  <span>
    Index Version 
    <Label />
  </span>
</IndexSelectorItem__StyledIndexSelectorItem>
`;

exports[`<IndexSelectorItem /> should render when [isSelected = false] 1`] = `
<IndexSelectorItem__StyledIndexSelectorItem
  active={false}
  onClick={[Function]}
>
  <Checkbox
    checked={false}
    disabled={false}
  />
  <strong>
    bar
  </strong>
  <span>
    Index Version 
    <Label />
  </span>
</IndexSelectorItem__StyledIndexSelectorItem>
`;
